# goit-web-hw-06

hw6web/university_project/: dockerfile  pyproject.toml
