[tool.poetry]
name = "university-project"
version = "0.1.0"
description = ""
authors = ["Анастасия <17121t2118@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
faker = "^36.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
